third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_full_invalid.exp

Diagnostics:
error: cannot borrow field `f1` of local `f1` which is already mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:14:18
   │
14 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ borrow attempted here
15 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:16:9
   │
13 │         let c = inner;
   │                 ----- previously mutably borrowed here
14 │         let f1 = &inner.f1;
   │                  --------- field `f1` previously borrowed here
15 │         *c;
16 │         *inner;
   │         ^^^^^^ read attempted here
17 │         *f1;
   │         --- conflicting reference `f1` used here
18 │         *inner;
19 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:18:9
   │
13 │         let c = inner;
   │                 ----- previously mutably borrowed here
   ·
18 │         *inner;
   │         ^^^^^^ read attempted here
19 │         *c;
   │         -- conflicting reference `c` used here

error: cannot borrow field `f1` of local `f1` which is already mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:23:18
   │
23 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ borrow attempted here
24 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:25:9
   │
22 │         let c = id_mut(inner);
   │                 ------------- previously mutably borrowed here
23 │         let f1 = &inner.f1;
   │                  --------- field `f1` previously borrowed here
24 │         *c;
25 │         *inner;
   │         ^^^^^^ read attempted here
26 │         *f1;
   │         --- conflicting reference `f1` used here
27 │         *inner;
28 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:27:9
   │
22 │         let c = id_mut(inner);
   │                 ------------- previously mutably borrowed here
   ·
27 │         *inner;
   │         ^^^^^^ read attempted here
28 │         *c;
   │         -- conflicting reference `c` used here

error: cannot mutably borrow field `f1` of local `f1` which is already borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:32:18
   │
31 │         let c = inner; // error in v2
   │                 ----- previously mutably borrowed here
32 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ borrow attempted here
33 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:34:9
   │
31 │         let c = inner; // error in v2
   │                 ----- previously mutably borrowed here
32 │         let f1 = &mut inner.f1;
   │                  ------------- field `f1` previously mutably borrowed here
33 │         *c;
34 │         *inner;
   │         ^^^^^^ read attempted here
35 │         *f1;
   │         --- conflicting reference `f1` used here
36 │         *inner;
37 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:36:9
   │
31 │         let c = inner; // error in v2
   │                 ----- previously mutably borrowed here
   ·
36 │         *inner;
   │         ^^^^^^ read attempted here
37 │         *c;
   │         -- conflicting reference `c` used here

error: cannot mutably borrow field `f1` of local `f1` which is already borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:41:18
   │
40 │         let c = id_mut(inner);
   │                 ------------- previously mutably borrowed here
41 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ borrow attempted here
42 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:43:9
   │
40 │         let c = id_mut(inner);
   │                 ------------- previously mutably borrowed here
41 │         let f1 = &mut inner.f1;
   │                  ------------- field `f1` previously mutably borrowed here
42 │         *c;
43 │         *inner;
   │         ^^^^^^ read attempted here
44 │         *f1;
   │         --- conflicting reference `f1` used here
45 │         *inner;
46 │         *c;
   │         -- conflicting reference `c` used here

error: cannot read local `inner` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full_invalid.move:45:9
   │
40 │         let c = id_mut(inner);
   │                 ------------- previously mutably borrowed here
   ·
45 │         *inner;
   │         ^^^^^^ read attempted here
46 │         *c;
   │         -- conflicting reference `c` used here
